# AuthorAI

./: .bobignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  umap.json
.bob/: custom_modes.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai_pipeline/: pyproject.toml
ai_pipeline/autoria_ai/: conditioner.py  db.py  embedder.py  fit_scorer.py  generator.py
ai_pipeline/autoria_ai/extractor/: chunker.py  cleaner.py  lexical.py  stylistic.py  syntactic.py  vocabulary.py
ai_pipeline/autoria_ai/passport/: __init__.py  builder.py  signer.py  verifier.py
ai_pipeline/autoria_ai/schemas/: passport.json  style_profile.json
ai_pipeline/tests/: test_conditioner.py  test_embedder.py  test_fit_scorer.py  test_generator.py  test_passport.py  test_passport_builder.py  test_smoke.py  test_vocabulary.py
backend/: conftest.py  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/routes/: __init__.py  authors.py  diagnostics.py  generate.py  health.py  jwks.py  passport.py
backend/app/services/: __init__.py  watsonx_client.py
backend/tests/: __init__.py  test_authors.py  test_config.py  test_diagnostics.py  test_document_upload.py  test_generate.py  test_health.py  test_jwks.py  test_passport_verify.py  test_style_profile.py  test_style_profile_recompute.py  test_watsonx_client.py
bob/: README.md  playbook.md  usage-report.md
bob/custom-modes/: generation-conductor.md  passport-auditor.md  studio-composer.md  style-extractor.md
corpus/: README.md
corpus/austen/: Emma by Jane Austen.txt  Northanger Abbey by Jane Austen.txt  Pride and Prejudice by Jane Austen.txt  Sense and Sensibility by Jane Austen.txt
corpus/dickens/: A Tale of Two Cities by Charles Dickens.txt  Bleak House by Charles Dickens.txt  Great Expectations by Charles Dickens.txt  Oliver Twist by Charles Dickens.txt
corpus/poe/: The Works of Edgar Allan Poe — Volume 1 by Edgar Allan Poe.txt  The Works of Edgar Allan Poe — Volume 2 by Edgar Allan Poe.txt
docs/: DEPLOYMENT.md  MVP.md  ONBOARDING.md  api_contract.yaml  architecture.md  decision_log.md  design-system.md  erd.md  passport_schema.md  style_features.md
frontend/: .eslintrc.json  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AddAuthorCard.tsx  AuthorCard.tsx  AuthorColumn.tsx  AuthorGrid.tsx  ComparativeMetricsTable.tsx  DistinctiveVocabHighlight.tsx  EmptyState.tsx  FitScoreBar.tsx  GenerateStudio.tsx  MetricChip.tsx  PromptComposer.tsx  SideBySideOutput.tsx  StyleDnaPanel.tsx  StyleRadarChart.tsx  StyleScatter2D.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  authors.ts  passport.test.ts  passport.ts  style-dna.ts  textMetrics.test.ts  textMetrics.ts  types.ts
infra/supabase/migrations/: 0001_init.sql  0002_hnsw_index.sql
keys/: jwks.public.json
scripts/: generate_keys.py  precompute_umap.py
(+29 files in other folders)
