[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoria-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-jose>=3.3",
    "ibm-watsonx-ai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "black>=24"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]